update build with github actions for windows and linux

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -11,7 +11,18 @@ jobs:
     - uses: actions/checkout@v1
     - name: Get Submodules
       run: git submodule update --init --recursive
-    - name: Get Node.js
-      run: git clone https://github.com/Kode/nodejs_bin.git --depth 1
-    - name: Compile
-      run: nodejs_bin/node-linux64 Kromx/make.js -g opengl
+    - name: install deps
+      run: sudo apt install -y clang && sudo apt install -y make && sudo apt install -y g++ && sudo apt install -y libxinerama-dev && sudo apt install -y libasound2-dev && sudo apt install -y libxi-dev && sudo apt install -y mesa-common-dev && sudo apt install -y libgl-dev && sudo apt install -y libvulkan-dev
+    - name: setup Node.js
+      uses: actions/setup-node@v1.4.2
+    - name: Kromx
+      run: node Kromx/make -g opengl
+    - name: kinc and compile
+      run: cd Kromx && node Kinc/make -g opengl --compiler clang --compile
+    - name: strip
+      run : cd Deployment && strip Krom
+    - name: publish build
+      uses: actions/upload-artifact@v2
+      with:
+        name: armorpaint
+        path: Kromx/Deployment/
